--- a/templates/index.html
+++ b/templates/index.html
@@ -19,37 +19,37 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5Eq_wwfyChNhq-H7TpgOhAHHgufV3rMNNZA&usqp=CAU" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">JECO</h5>
+        <p class="Este animal se llama jeco, se caracteriza por sus llamativos colores">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLQYHYdG_yBj3ZWcCvAthd67qG44lg1SaqAQ&usqp=CAU" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">ZORRO</h5>
+        <p class="Este animal es un zorro, se caracteriza por su cola larga y tupida">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRA5iugHrf7ZdEuyE6vhNUpnBHwcir32_ywEg&usqp=CAU"" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">LOBO</h5>
+        <p class="Este animal es un lobo, se caracteriza por su gran tamaño y peso">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5jXfAOvWicJTw8o3KlZLSkP_VAaxVy9WUFw&usqp=CAU" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">OSO POLAR</h5>
+        <p class="Este animal es un oso polar, se caracteriza por su grueso pelaje y resistencia al frio">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
     </div>
   </div>
